--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List Maker</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/images/cap.png" type="image/x-icon">
+    <link rel="shortcut icon" href="cap.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="container">
-        <img src="/images/cap.png" alt="">
+        <img src="cap.png" alt="">
         <input type="text" id="input-field" placeholder="Sleep">
         <button id="add-button">Add to List</button>
         <ul id="todolist">
